--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ Mkfile.old
 dkms.conf
 datasheets
 model/*.stl
+.pioenvs
+.piolibdeps
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
